LAB_Week_01/blinky/.vscode/uv4.log
*** Using Compiler 'V6.23', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
Build target 'blinky'
blinky.c(27): error: 'inc/hw_memmap.h' file not found
   27 | #include "inc/hw_memmap.h"
      |          ^~~~~~~~~~~~~~~~~
1 error generated.
compiling blinky.c...
".\rvmdk\blinky.axf" - 1 Error(s), 0 Warning(s).
Target not created.
Build Time Elapsed:  00:00:00
